# codepraise-app-python

./: .coveragerc  .dockerignore  .gitignore  404.html  Dockerfile  Pipfile  Procfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  heroku.yml  index.html  mkdocs.yml  pyproject.toml  typing_helpers.py
app/application/controllers/: app.py  route_helpers.py
app/application/forms/: __init__.py
app/application/representers/: repos_representer.py  (+1 more)
app/infrastructure/: __init__.py
application/: app.py  helpers.py
application/controllers/: app.py
application/forms/: url_request.py
application/representers/: __init__.py  collaborator_representer.py  folder_summary_representer.py  repo_representer.py  repos_representer.py
application/services/: __init__.py  add_project.py
application/views/: __init__.py  all_projects.py  folder_summary.py  processing_view.py  project.py
architecture/: index.html
config/: config.py
config/env/: .env  .env.dev  .env.prod  dev.env  prod.env  test.env
docker/: index.html
docs/: architecture.md  docker.md  index.md  invoke.md  prerequisite.md
infrastructure/: __init__.py  api_gateway.py
invoke/: index.html
prerequisite/: index.html
presentation/views/: folder_summary.html  home.html  layout.html
search/: search_index.json
spec/: helper.py  homepage_spec.py  load_all.py  spec_helper.py  test_load_all.py
spec/pages/: __init__.py  base_page.py  home_page.py
tasks/: __init__.py  console.py  quality.py  spec.py  vcr.py
tasks/api/: __init__.py  run.py
(+12 files in other folders)
