[tool.poetry]
name = "codepraise-app-python"
version = "0.1.0"
description = ""
authors = ["as10896"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
requests = "^2.28.1"
fastapi = "^0.78.0"
python-multipart = "^0.0.5"  # to recieve html form data
uvicorn = {extras = ["standard"], version = "^0.18.2"}
invoke = "^1.7.1"
Jinja2 = "^3.1.2"
itsdangerous = "^2.1.2"  # to use SessionMiddleware from Starlette
returns = "^0.19.0"


[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
ipython = "^8.4.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"
flake8 = "^4.0.1"
radon = "^5.1.0"
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.961"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
selenium = "^4.3.0"
webdriver-manager = "^3.8.0"  # to automatically install webdriver for Selenium

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
